@@ -1,26 +1,31 @@
 package ru.mifi.practice.voln.object;
 
-import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
+import net.bytebuddy.dynamic.scaffold.subclass.ConstructorStrategy;
 import net.bytebuddy.implementation.MethodDelegation;
+import net.bytebuddy.implementation.bind.annotation.AllArguments;
+import net.bytebuddy.implementation.bind.annotation.Origin;
+import net.bytebuddy.implementation.bind.annotation.RuntimeType;
 
 import java.io.Closeable;
-import java.lang.reflect.Field;
+import java.io.IOException;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.Optional;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
 import static net.bytebuddy.matcher.ElementMatchers.isPublic;
-import static net.bytebuddy.matcher.ElementMatchers.named;
-import static net.bytebuddy.matcher.ElementMatchers.not;
 
 public interface ObjectPool<T extends Closeable> extends Closeable {
     Optional<T> getObject(long timeout, TimeUnit unit);
@@ -30,6 +35,10 @@ public interface ObjectPool<T extends Closeable> extends Closeable {
     }
 
     void dispose(T object);
+
+    interface ProxyMarker {
+        Object getTarget();
+    }
 
     @SuppressWarnings("PMD.CloseResource")
     @Slf4j
@@ -42,6 +51,7 @@ public interface ObjectPool<T extends Closeable> extends Closeable {
         private final AtomicInteger createdCount;
         private final Semaphore semaphore;
         private final Class<T> type;
+        private final Object lock = new Object();
 
         public Generic(Supplier<T> creator,
                        Consumer<T> refresh,
@@ -77,24 +87,32 @@ public interface ObjectPool<T extends Closeable> extends Closeable {
             }
         }
 
-        @SneakyThrows
         @Override
         public Optional<T> getObject(long timeout, TimeUnit unit) {
-            if (!semaphore.tryAcquire(timeout, unit)) {
+            try {
+                if (!semaphore.tryAcquire(timeout, unit)) {
+                    return Optional.empty();
+                }
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
                 return Optional.empty();
             }
 
             try {
                 T obj = pool.poll();
                 if (obj == null) {
-                    synchronized (this) {
+                    synchronized (lock) {
                         if (createdCount.get() < maxSize) {
                             obj = creator.get();
                             createdCount.incrementAndGet();
                         }
                     }
                     if (obj == null) {
-                        obj = pool.poll(timeout, unit);
+                        try {
+                            obj = pool.poll(timeout, unit);
+                        } catch (InterruptedException e) {
+                            Thread.currentThread().interrupt();
+                        }
                     }
                 }
 
@@ -110,51 +128,50 @@ public interface ObjectPool<T extends Closeable> extends Closeable {
                 }
 
                 return Optional.of(Wrapper.proxy(this, obj, type));
-            } catch (Exception e) {
+            } catch (RuntimeException e) {
                 semaphore.release();
                 throw e;
+            } catch (Exception e) {
+                semaphore.release();
+                throw new RuntimeException(e);
             }
         }
 
-        @SuppressWarnings("PMD.AvoidAccessibilityAlteration")
         @Override
         public void dispose(T object) {
             if (object == null) {
                 semaphore.release();
                 return;
             }
-            try {
-                Field target = object.getClass().getDeclaredField("target");
-                target.setAccessible(true);
-                if (target.get(object).getClass().equals(type)) {
-                    object = (T) target.get(object);
-                }
-            } catch (Exception e) {
-                if (log.isErrorEnabled()) {
-                    log.error("Error fetch field: {}", e.getMessage());
-                }
+
+            T target = object;
+            if (object instanceof ProxyMarker) {
+                target = (T) ((ProxyMarker) object).getTarget();
             }
 
             try {
-                if (validator.test(object)) {
-                    refresh.accept(object);
-                    if (!pool.offer(object)) {
-                        destroyObject(object);
+                if (validator.test(target)) {
+                    refresh.accept(target);
+                    if (!pool.offer(target)) {
+                        destroyObject(target);
                     }
                 } else {
-                    destroyObject(object);
+                    destroyObject(target);
                 }
             } catch (Exception e) {
-                destroyObject(object);
+                destroyObject(target);
             } finally {
                 semaphore.release();
             }
         }
 
-        @SneakyThrows
         private void destroyObject(T object) {
             try {
                 object.close();
+            } catch (IOException e) {
+                if (log.isErrorEnabled()) {
+                    log.error("Error closing object: {}", e.getMessage());
+                }
             } finally {
                 createdCount.decrementAndGet();
             }
@@ -169,28 +186,67 @@ public interface ObjectPool<T extends Closeable> extends Closeable {
             createdCount.set(0);
         }
 
-        private record Wrapper<T extends Closeable>(T target, ObjectPool<T> pool) {
+        private static final class Wrapper<T extends Closeable> {
+            private final T target;
+            private final ObjectPool<T> pool;
+            private final AtomicBoolean closed = new AtomicBoolean(false);
 
-            @SuppressWarnings("resource")
-            @SneakyThrows
+            private Wrapper(T target, ObjectPool<T> pool) {
+                this.target = target;
+                this.pool = pool;
+            }
+
+            @SuppressWarnings("unchecked")
             public static <T extends Closeable> T proxy(ObjectPool<T> pool, T target, Class<T> clazz) {
-                return new ByteBuddy()
-                    .subclass(clazz)
-                    .method(isPublic().and(not(named("close"))))
-                    .intercept(MethodDelegation.to(target))
-                    .method(named("close"))
-                    .intercept(MethodDelegation.to(new Wrapper<>(target, pool)))
+                Wrapper<T> wrapper = new Wrapper<>(target, pool);
+                Class<? extends T> proxyClass = new ByteBuddy()
+                    .subclass(clazz, ConstructorStrategy.Default.NO_CONSTRUCTORS)
+                    .implement(ProxyMarker.class)
+                    .method(isPublic())
+                    .intercept(MethodDelegation.to(wrapper))
                     .make()
                     .load(clazz.getClassLoader() != null ? clazz.getClassLoader() : ClassLoader.getSystemClassLoader(),
                         ClassLoadingStrategy.Default.INJECTION)
-                    .getLoaded()
-                    .getDeclaredConstructor()
-                    .newInstance();
+                    .getLoaded();
+
+                try {
+                    try {
+                        return proxyClass.getDeclaredConstructor().newInstance();
+                    } catch (NoSuchMethodException e) {
+                        Constructor<?> objCtx = Object.class.getDeclaredConstructor();
+                        Constructor<?> cons = sun.reflect.ReflectionFactory.getReflectionFactory()
+                            .newConstructorForSerialization(proxyClass, objCtx);
+                        return (T) cons.newInstance();
+                    }
+                } catch (Exception e) {
+                    throw new RuntimeException("Failed to create proxy", e);
+                }
             }
 
-            @SuppressWarnings("unused")
-            public void close() {
-                pool.dispose(target);
+            @RuntimeType
+            public Object intercept(@Origin Method method, @AllArguments Object[] args) throws Throwable {
+                String name = method.getName();
+                int params = method.getParameterCount();
+
+                if ("close".equals(name) && params == 0) {
+                    if (closed.compareAndSet(false, true)) {
+                        pool.dispose(target);
+                    }
+                    return null;
+                }
+                if ("getTarget".equals(name) && params == 0) {
+                    return target;
+                }
+
+                if (closed.get()) {
+                    throw new IllegalStateException("Object pool proxy is closed");
+                }
+
+                try {
+                    return method.invoke(target, args);
+                } catch (InvocationTargetException e) {
+                    throw e.getCause();
+                }
             }
         }
     }
